--- a/.eslintrc
+++ b/.eslintrc
@@ -4,7 +4,7 @@
     "node": true
   },
   "extends": ["eslint:recommended", "plugin:prettier/recommended"],
-  "plugins": ["react", "eslint-plugin-react"],
+  "plugins": ["react", "eslint-plugin-react", "react-hooks"],
   "parser": "babel-eslint",
   "parserOptions": {
     "ecmaVersion": 2018,
